unpackaged/main/default/objects/pse__Schedule__c/pse__Schedule__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ScheduleHelp</customHelpPage>
    <description>Represents start and end dates and weekly working hours for an assignment. You enter schedule details when you create an assignment, which also creates an associated schedule record. Although schedule records have the fields Scheduled Hours and Scheduled Days, these are not intended for users to enter time directly. Their values are system-generated based on schedule dates, patterns, and exceptions. Specific deviations from schedules are represented as schedule exceptions.</description>
    <label>Schedule</label>
    <nameField>
        <displayFormat>Schedule{000000}</displayFormat>
        <label>Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>