unpackaged/main/default/objects/pse__Schedule__c/fields/pse__Action_Force_Schedule_Refresh__c.field-meta.xml
<CustomField>
    <fullName>pse__Action_Force_Schedule_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked on save, refreshes Scheduled Hours, Assignment Projected Revenue and Est Vs Actuals records related to Schedule/Assignment.</description>
    <inlineHelpText>If checked on save, refreshes Scheduled Hours, Assignment Projected Revenue and Est Vs Actuals records related to Schedule/Assignment.</inlineHelpText>
    <label>Action: Force Schedule Refresh</label>
    <type>Checkbox</type>
</CustomField>