unpackaged/main/default/objects/pse__Schedule__c/fields/pse__Action_Update_Future_Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Action_Update_Future_Scheduled_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked on save, refreshes Future Scheduled Hours</description>
    <inlineHelpText>If checked on save, refreshes Future Scheduled Hours</inlineHelpText>
    <label>Action: Update Future Scheduled Hours</label>
    <type>Checkbox</type>
</CustomField>