unpackaged/main/default/objects/pse__Schedule__c/fields/pse__Friday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Friday_End_Time__c</fullName>
    <description>Friday End Time is the scheduled end time on the indicated day..</description>
    <inlineHelpText>Friday End Time is the scheduled end time on the indicated day..</inlineHelpText>
    <label>Friday End Time</label>
    <type>DateTime</type>
</CustomField>