unpackaged/main/default/objects/pse__Schedule__c/fields/pse__Is_Blocking__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Blocking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, this schedule blocks other assignments created with the Team Schedule Planner application.</description>
    <inlineHelpText>If selected, this schedule blocks other assignments created with the Team Schedule Planner application.</inlineHelpText>
    <label>Is Blocking</label>
    <type>Checkbox</type>
</CustomField>