unpackaged/main/default/objects/pse__Schedule__c/fields/pse__Scheduled_Days__c.field-meta.xml
<CustomField>
    <fullName>pse__Scheduled_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of days scheduled</description>
    <inlineHelpText>Number of days scheduled</inlineHelpText>
    <label>Scheduled Days</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>