unpackaged/main/default/objects/pse__Schedule__c/fields/pse__Sunday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Sunday_Start_Time__c</fullName>
    <description>Sunday Start Time is the scheduled start time on the indicated day.</description>
    <inlineHelpText>Sunday Start Time is the scheduled start time on the indicated day.</inlineHelpText>
    <label>Sunday Start Time</label>
    <type>DateTime</type>
</CustomField>