unpackaged/main/default/objects/pse__Schedule__c/fields/pse__Thursday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Thursday_End_Time__c</fullName>
    <description>Thursday End Time is the scheduled end time on the indicated day.</description>
    <inlineHelpText>Thursday End Time is the scheduled end time on the indicated day.</inlineHelpText>
    <label>Thursday End Time</label>
    <type>DateTime</type>
</CustomField>