unpackaged/main/default/objects/pse__Schedule__c/fields/pse__Thursday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Thursday_Start_Time__c</fullName>
    <description>Thursday Start Time is the scheduled start time on the indicated day.</description>
    <inlineHelpText>Thursday Start Time is the scheduled start time on the indicated day.</inlineHelpText>
    <label>Thursday Start Time</label>
    <type>DateTime</type>
</CustomField>